# srr-agentic-case-processing

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  PUBLIC_SCOPE.md
examples/: synthetic_case.txt  synthetic_case_minimal.txt
scripts/: run_demo.py
src/srr_public/: __init__.py  api.py  deadline_rules.py  domain.py  field_extractor.py  pipeline.py  quality_gate.py  router.py  self_repair.py
tests/: test_pipeline.py
