[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srr-agentic-case-processing-public"
version = "0.1.0"
description = "Public reference implementation of an SRR agentic case-processing workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Weijian Tim Zhang" }
]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
